
** New commands

  base32 is added to complement the existing base64 command,
  and encodes and decodes printable text as per RFC 4648.

** New features

  dd now summarizes sizes in --human-readable format too, not just --si.
  E.g., "3441325000 bytes (3.4 GB, 3.2 GiB) copied".  It omits the summaries
  if they would not provide useful information, e.g., "3 bytes copied".

  md5sum now supports the --ignore-missing option to allow
  verifying a subset of files given a larger list of checksums.
  This also affects sha1sum, sha224sum, sha256sum, sha384sum and sha512sum.

  printf now supports the '%q' format to print arguments in a form that
  is reusable by most shells, with non-printable characters escaped
  with the POSIX proposed $'...' syntax.

** Changes in behavior

  base64 no longer supports hex or oct --wrap parameters,
  thus better supporting decimals with leading zeros.

  date --iso-8601 now uses +00:00 timezone format rather than +0000.
  The standard states to use this "extended" format throughout a timestamp.

  df now prefers sources towards the root of a device when
  eliding duplicate bind mounted entries.

  ls now quotes file names unambiguously and appropriate for use in a shell,
  when outputting to a terminal.

** Improvements

  All utilities now quote user supplied arguments in error strings,
  which avoids confusing error messages in the presence of '\r' chars etc.

  Utilities that traverse directories, like chmod, cp, and rm etc., will operate
  more efficiently on XFS and in more cases on NFS, through "leaf optimization".

  md5sum now ensures a single line per file for status on standard output,
  by using a '\' at the start of the line, and replacing any newlines with '\n'.
  This also affects sha1sum, sha224sum, sha256sum, sha384sum and sha512sum.

  dircolors now supports globbing of TERM entries in its database.
  For example "TERM *256color*" is now supported.

  du no longer stats all mount points at startup, only doing so